# tauri-plugin-channel

./: .eslintignore  .eslintrc.cjs  .gitignore  .prettierrc  Cargo.toml  README.md  package.json
.changes/: config.json  initial-release.md  readme.md
.github/: dependabot.yml
.github/workflows/: build.yml  covector-version-or-publish.yml
.husky/: pre-commit
examples/tauri-app/: index.html  package.json  tsconfig.json
examples/tauri-app/src/: App.svelte  types.d.ts
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/src/: main.rs
examples/tauri-app/src/lib/: FastBar.svelte  Pong.svelte  SlowBar.svelte
src/: lib.rs
webview-dist/: index.d.ts  index.js
webview-src/: index.ts
