[package]
name = "tauri-plugin-channel"
version = "0.0.0"
authors = [ "You" ]
description = ""
edition = "2021"
exclude = ["/examples", "/webview-dist", "/webview-src", "node_modules"]

[dependencies]
serde = "1.0"
serde_json = "1.0"
tauri = { version = "1.5.4" }
ustr = "0.10.0"
uuid = {version = "1.6.1", features = ["v7", "fast-rng", "serde"] }
