[package]
name = "tauri-plugin-channel"
version = "0.0.0"
authors = [ "You" ]
description = ""
edition = "2021"
exclude = ["/examples", "/webview-dist", "/webview-src", "node_modules"]

[dependencies]
async-stream = "0.3.5"
futures-core = "0.3.30"
serde = "1.0"
serde_json = "1.0"
tauri = { version = "1.5.4" }
tokio-stream = "0.1.14"
ustr = "0.10.0"
uuid = {version = "1.6.1", features = ["v7", "fast-rng", "serde"] }
